...
        android:layout_height="41dp"
        android:text="Clear"
        app:backgroundTint="@color/myYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toEndOf="@+id/view13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <Button
        android:id="@+id/button3"
        android:layout_width="99dp"
...
        android:layout_marginStart="4dp"
        android:text="Delete"
        app:backgroundTint="@color/myRed"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/button2"
        android:layout_width="99dp"
...
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <TextView
        android:id="@+id/view10"
        android:layout_width="249dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/view8"
        android:layout_width="249dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/view7"
        android:layout_width="249dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <TextView
        android:id="@+id/view5"
        android:layout_width="249dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginBottom="3dp"
        android:text="Delete"
        app:backgroundTint="@color/myRed"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/view3"
        android:layout_width="249dp"
...
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/view6"
        android:layout_width="249dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
