...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feature2">


    <Button
        android:id="@+id/backBtn_feature2"
        android:layout_width="59dp"
        android:layout_height="34dp"
        android:text="Back"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/date_3"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:text="Wednesday 3/12"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/date_2"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:text="Tuesday 3/11"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/date_1"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:text="Monday 3/10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/b_1_1"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:text="book"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/b_1_2"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:text="book"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/rm_1_2"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:text="Remind me"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
